<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stash</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombreProducto">Nombre del producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="categoriaproducto">Categoria del producto</string>
    <string name="tiendadecompra">Tienda de Compra</string>
    <string name="agregarproducto">Agregar Producto</string>
    <string name="preciototal">Precio Total: $0.00</string>
    <string name="comprar">Comprar</string>
    <string name="modonocturno">Modo Nocturno</string>
    <string name="tiemposplashscreen">Tiempo Splash Screen</string>
    <string name="volver">Volver</string>
    <string name="eliminar">Eliminar</string>
    <string name="listadeproductos">LISTA DE PRODUCTOS</string>
    <string name="ordenar">Ordenar</string>
    <string name="usuarios">USUARIOS</string>
    <string name="crearusuario">Crear Usuario</string>
    <string name="presupuesto">PRESUPUESTO:$</string>
    <string name="inventario">Inventario</string>
    <string name="tiendas">Tiendas</string>
    <string name="Tiendas">TIENDAS</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrarsesion">Cerrar Sesion</string>
    <string name="ordenarpornombre">Ordenar por Nombre</string>
    <string name="oredenarporcantidad">Ordenar por Cantidad</string>
    <string name="oredenarporcategoria">Ordenar por Categoría</string>
    <string name="escribeunanota">Escribe una nota</string>
    <string name="notas">Notas</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregartienda">Agregar Tienda</string>
    <string name="nombretienda">Nombre de la tienda</string>
    <string name="direcciontienda">Dirección de la tienda</string>
    <string name="horarioatencion">Horario de atención</string>
    <string name="selecionatipopago">Selecciona el tipo de pago</string>
    <string name="seleccionacategoria">Selecciona la categoría</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="Presupuesto">Presupuesto</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="Nombre">Nombre:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="Precio">Precio:</string>
    <string name="Categoria">Categoria:</string>
    <string name="Tienda">Tienda:</string>
    <string name="ingresepresupuesto">Ingrese el presupuesto</string>
    <string name="editar">Editar</string>
    <string name="cambiaridioma">Cambiar Idioma</string>
    <string name="editartienda">Editar Tienda</string>
    <string name="saldo">Saldo: $%1$s</string>
    <string name="precio_total">Precio Total: $%1$s</string>
    <string name="saldo_insuficiente">Saldo insuficiente</string>
    <string name="seleccionetiempo">Seleccione el tiempo deseado</string>
    <string name="seleccioneidioma">Seleccione el idioma deseado</string>
    <string name="nombre_tiendas">Nombre: %1$s</string>
    <string name="direccion_tiendas">Dirección: %1$s</string>
    <string name="horario_tiendas">Horario de atención: %1$s</string>
    <string name="tipo_pago_tiendas">Tipo de Pago: %1$s</string>
    <string name="categoria_tiendas">Categoría: %1$s</string>
    <string name="cerrar">Cerrar</string>
    <string name="montopositivo">"El monto debe ser un número positivo"</string>
    <string name="numerovalido">"Ingrese un número válido"</string>
    <string name="crear">Crear</string>
    <string name="crearnuevousuario">Crear Nuevo Usuario</string>
    <string name="agregarnuevatienda">Agregar Nueva Tienda</string>
</resources>