<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/DarkOliveGreen">
    </View>
    <LinearLayout
          android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/AntiqueWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/notas"
                    android:textSize="24dp" />
             </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textoNotas"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:hint="@string/escribeunanota" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textoNotas"
            android:layout_alignParentEnd="true"
            android:text="@string/guardar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noteRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/saveButton" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/buttonVolverNotas"
            android:layout_width="153dp"
            android:layout_height="76dp"
            android:layout_margin="20dp"

            android:background="@color/DarkSeaGreen"
            android:text="@string/volver"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>