<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracion">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">
        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/DarkOliveGreen"
            android:layout_marginBottom="20dp">

        </View>
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />
        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/DarkOliveGreen">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity=""
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/modonocturno"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tiemposplashscreen"/>
            <Button
                android:id="@+id/buttonCambiarIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambiaridioma" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom|center">

                <Button
                    android:id="@+id/buttonVolverConfig"
                    android:layout_width="153dp"
                    android:layout_height="76dp"
                    android:layout_margin="20dp"

                    android:background="@color/DarkSeaGreen"
                    android:text="@string/volver"
                    android:textSize="24sp" />

            </LinearLayout>




        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>